# aoc-framework-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml
crates/aoc-framework-core/: Cargo.toml
crates/aoc-framework-core/src/: lib.rs
crates/aoc-framework-core/src/web_io/: mod.rs
crates/aoc-framework-macros/: Cargo.toml
crates/aoc-framework-macros/src/: lib.rs
crates/aoc-framework-parsers/: Cargo.toml
crates/aoc-framework-parsers/src/: lib.rs
crates/aoc-framework-parsers/src/common/: raw.rs
crates/aoc-framework-utils/: Cargo.toml
crates/aoc-framework-utils/src/: lib.rs
crates/aoc-framework-utils/src/acting_closures/: mod.rs
crates/aoc-framework-utils/src/iterators/: mod.rs
crates/aoc-framework-utils/src/math/: mod.rs
crates/aoc-framework-utils/src/math/algebra/: division_ring.rs  mod.rs  vector.rs
crates/aoc-framework-utils/src/math/topology/: mod.rs
crates/aoc-parsers/: Cargo.toml
crates/aoc-parsers/src/: dimensions_parser.rs  lib.rs  raw_parser.rs
crates/helpers/aoc-acting-closures/src/: lib.rs
crates/helpers/aoc-cryptography/: Cargo.toml
crates/helpers/aoc-cryptography/src/: lib.rs
crates/helpers/aoc-iter-tools/: Cargo.toml
crates/helpers/aoc-iter-tools/src/: lib.rs
crates/helpers/aoc-linear-algebra/: Cargo.toml
crates/helpers/aoc-linear-algebra/src/: matrix.rs
crates/helpers/aoc-topology/src/: lib.rs
crates/macros/aoc-benchmarks/: Cargo.toml
crates/macros/aoc-benchmarks/src/: lib.rs
crates/macros/aoc-finalize/: Cargo.toml
crates/macros/aoc-finalize/src/: lib.rs
crates/macros/aoc-initialize/: Cargo.toml
crates/macros/aoc-initialize/src/: lib.rs
crates/macros/aoc-parser/: Cargo.toml
crates/macros/aoc-parser/src/: lib.rs
crates/macros/aoc-solution/: Cargo.toml
crates/macros/aoc-solution/src/: lib.rs
crates/macros/aoc-year/: Cargo.toml
crates/macros/aoc-year/src/: lib.rs
crates/scaffold/aoc-base-types/: Cargo.toml
crates/scaffold/aoc-input-loader/: Cargo.toml
crates/scaffold/aoc-input-loader/src/: lib.rs
crates/scaffold/aoc-timers/: Cargo.toml
crates/scaffold/aoc-timers/src/: lib.rs
crates/solutions/aoc-2015/: Cargo.toml
crates/solutions/aoc-2015/src/: d1.rs  d2.rs  d3.rs  d4.rs
crates/utils/aoc-acting-closures/: Cargo.toml
crates/utils/aoc-cryptography/src/: md5.rs
crates/utils/aoc-linear-algebra/src/: vector.rs
crates/utils/aoc-topology/: Cargo.toml
src/: lib.rs  main.rs
