[package]
name = "aoc-framework-rs"
version = "0.1.0"
edition = "2021"
authors = [ "Pavel Sedlacek <sedlacek.pavel@pm.me>" ]
description = "A framework for AdventOfCode coding competition, that handles input, output and provides some core utilities."
repository = "https://github.com/Pavel-Sedlacek/aoc-framework-rs"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = [ "adventofcode", "aoc", "framework" ]
categories = [ "development-tools", "data-structures", "algorithms" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/scaffold/aoc-base-types",
    "crates/scaffold/aoc-input-loader",
    "crates/scaffold/aoc-timers",

    "crates/macros/aoc-finalize",
    "crates/macros/aoc-year",
    "crates/macros/aoc-initialize",
    "crates/macros/aoc-benchmarks",
    "crates/macros/aoc-solution",
    "crates/macros/aoc-parser",

    "crates/aoc-parsers",

    "crates/utils/aoc-iter-tools",
    "crates/utils/aoc-linear-algebra",
    "crates/utils/aoc-topology",
    "crates/utils/aoc-acting-closures",
    "crates/utils/aoc-cryptography",
]

[dependencies]
aoc-base-types = { path = "crates/scaffold/aoc-base-types", version = "0.1.0" }
aoc-input-loader = { path = "crates/scaffold/aoc-input-loader", version = "0.1.0" }
aoc-timers = { path = "crates/scaffold/aoc-timers", version = "0.1.0" }

aoc-finalize = { path = "crates/macros/aoc-finalize", version = "0.1.0" }
aoc-year = { path = "crates/macros/aoc-year", version = "0.1.0" }
aoc-initialize = { path = "crates/macros/aoc-initialize", version = "0.1.0" }
aoc-benchmarks = { path = "crates/macros/aoc-benchmarks", version = "0.1.0" }
aoc-solution = { path = "crates/macros/aoc-solution", version = "0.1.0" }
aoc-parser = { path = "crates/macros/aoc-parser", version = "0.1.0" }

aoc-parsers   = { path = "crates/aoc-parsers", version = "0.1.0" }

aoc-iter-tools = { path = "crates/utils/aoc-iter-tools", version = "0.1.0" }
aoc-linear-algebra = { path = "crates/utils/aoc-linear-algebra", version = "0.1.0" }
aoc-topology = { path = "crates/utils/aoc-topology", version = "0.1.0" }
aoc-acting-closures = { path = "crates/utils/aoc-acting-closures", version = "0.1.0" }
aoc-cryptography = { path = "crates/utils/aoc-cryptography", version = "0.1.0" }