[package]
name = "aoc-framework-rs"
version = "0.1.0"
edition = "2021"

authors = [ "Pavel Sedlacek <sedlacek.pavel@pm.me>" ]
description = "A framework for AdventOfCode coding competition, that handles input, output and provides some core utilities."
repository = "https://github.com/Pavel-Sedlacek/aoc-framework-rs"

readme = "README.md"
license = "MIT"

keywords = [ "adventofcode", "aoc", "framework" ]
categories = [ "development-tools", "data-structures", "algorithms" ]

[workspace]
members = [
    "./crates/aoc-framework-parsers",
    "./crates/aoc-framework-utils",
    "./crates/aoc-framework-core",
    "./crates/aoc-framework-macros"
]

[dependencies]
#aoc-framework-parsers = "0.1.0"
#aoc-framework-utils = "0.1.0"
#aoc-framework-core = "0.1.0"
#aoc-framework-macros = "0.1.0"