[package]
name = "aoc-framework-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
quote = "*"
syn = { version = "2.0", features = ["full"] }
attribute-derive = "0.8.1"

[lib]
proc-macro=true