[package]
name = "aoc-framework-core"
version = "0.1.0"
edition = "2021"

authors = [ "Pavel Sedlacek <sedlacek.pavel@pm.me>" ]
description = "Core types and function for aoc-framework-rs"
repository = "https://github.com/Pavel-Sedlacek/aoc-framework-rs/tree/master/crates/aoc-framework-core"

license = "MIT"

keywords = [ "adventofcode", "aoc", "framework" ]
categories = [ "development-tools", "data-structures", "algorithms" ]

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }