[package]
name = "aoc-framework-macros"
version = "0.1.0"
edition = "2021"

authors = [ "Pavel Sedlacek <sedlacek.pavel@pm.me>" ]
description = "Proc macros for aoc-framework-rs"
repository = "https://github.com/Pavel-Sedlacek/aoc-framework-rs/tree/master/crates/aoc-framework-macros"

license = "MIT"

keywords = [ "adventofcode", "aoc", "framework" ]
categories = [ "development-tools", "data-structures", "algorithms" ]

[dependencies]
quote = "1.0.33"
syn = { version = "2.0", features = ["full"] }
attribute-derive = "0.8.1"

[lib]
proc-macro=true