[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-solution = { path = "../../macros/aoc-solution" }
aoc-parsers = { path = "../../aoc-parsers" }
aoc-input-loader = { path = "../../scaffold/aoc-input-loader" }

aoc-iter-tools = { path = "../../helpers/aoc-iter-tools" }
aoc-linear-algebra = { path = "../../helpers/aoc-linear-algebra" }
aoc-topology = { path = "../../helpers/aoc-topology" }
aoc-acting-closures = { path = "../../helpers/aoc-acting-closures" }
aoc-cryptography = { path = "../../helpers/aoc-cryptography" }